# mcp-sentinel-box

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  rust-toolchain.toml  test_static.sh  test_tiny.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
core/: Makefile
core/include/: json_lite.h  sentinelbox.h
core/src/: capability.c  cgroup.c  ipc.c  json_lite.c  main.c  namespace.c  overlayfs.c  profile.c  sandbox.c  seccomp.c  util.c
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docs/: AGENT.md  ARCHITECTURE.md  Final_Report.tex  WIKI.md  db-schema.md  sentinelbox.1  slide-images.md
mappings/: syscall_feedback.json
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.js  index.js.map  index.ts
mcp-server/src/services/: translator.d.ts  translator.d.ts.map  translator.js  translator.js.map  translator.ts
monitor/: Cargo.toml
monitor/migrations/: 001_init.sql
monitor/src/: db.rs  feedback.rs  ipc.rs  main.rs  policy.rs  seccomp.rs  telemetry.rs
monitor/src/ebpf/: mod.rs
profiles/: datascience.json  strict.json  web.json
rootfs/: .gitkeep
scripts/: docker-entrypoint.sh  provision.sh  run.sh  setup.sh  setup_cgroup.sh  setup_rootfs.sh  start_monitoring.sh
server/: package-lock.json  package.json
server/src/: index.js
tests/: run_tests.sh
tests/samples/: hello.sh  malicious_mount.sh  malicious_network.sh  oom_bomb.sh
